--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         rel="stylesheet">
     <!-- Chart.js -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="dashboard/style.css">
 </head>
 
 <body>
@@ -255,8 +255,8 @@
     </div>
 
     <!-- Data & App -->
-    <script src="data.js"></script>
-    <script src="app.js"></script>
+    <script src="dashboard/data.js"></script>
+    <script src="dashboard/app.js"></script>
 </body>
 
 </html>
